syntax = "proto3";
package trinsic.services;

import "google/protobuf/struct.proto";
import "CoreService.proto";

message IssueRequest {
    google.protobuf.Struct document = 1;
}

message IssueResponse {
    google.protobuf.Struct document = 1;
}

// Create Proof
message CreateProofRequest {
    google.protobuf.Struct reveal_document = 1;
    string document_id = 2;
}

message CreateProofResponse {
    google.protobuf.Struct proof_document = 1;
}

// Verify Proof
message VerifyProofRequest {
    google.protobuf.Struct proof_document = 1;
}

message VerifyProofResponse {
    bool valid = 1;
}

message SendRequest {
    oneof delivery_method {
        string email = 1;
        string did_uri = 2;
        google.protobuf.Struct didcomm_invitation = 3;
    }

    google.protobuf.Struct document = 100;
}

message SendResponse {
    ResponseStatus status = 1;
}

service Credential {
    rpc Issue(IssueRequest) returns (IssueResponse);

    rpc CreateProof(CreateProofRequest) returns (CreateProofResponse);

    rpc VerifyProof(VerifyProofRequest) returns (VerifyProofResponse);

    rpc Send(SendRequest) returns (SendResponse);
}
